MusicXmlScoreDocFileInput integrated