@@ -1,7 +1,10 @@
 package com.xenoage.zong.desktop.io.musicxml.in;
 
-import org.pcollections.PVector;
+import static com.xenoage.utils.collections.CList.clist;
+import static com.xenoage.zong.io.musicxml.in.readers.FontInfoReader.readFontInfo;
+import static com.xenoage.zong.io.musicxml.in.readers.OtherReader.readAlignment;
 
+import com.xenoage.utils.collections.CList;
 import com.xenoage.utils.color.Color;
 import com.xenoage.utils.font.FontInfo;
 import com.xenoage.utils.math.geom.Point2f;
@@ -11,6 +14,14 @@ import com.xenoage.zong.core.text.Alignment;
 import com.xenoage.zong.layout.Layout;
 import com.xenoage.zong.layout.Page;
 import com.xenoage.zong.layout.frames.TextFrame;
+import com.xenoage.zong.musicxml.types.MxlCredit;
+import com.xenoage.zong.musicxml.types.MxlCreditWords;
+import com.xenoage.zong.musicxml.types.MxlFormattedText;
+import com.xenoage.zong.musicxml.types.MxlScorePartwise;
+import com.xenoage.zong.musicxml.types.attributes.MxlColor;
+import com.xenoage.zong.musicxml.types.attributes.MxlPosition;
+import com.xenoage.zong.musicxml.types.choice.MxlCreditContent.MxlCreditContentType;
+import com.xenoage.zong.musicxml.types.enums.MxlVAlign;
 import com.xenoage.zong.text.FormattedText;
 import com.xenoage.zong.text.FormattedTextElement;
 import com.xenoage.zong.text.FormattedTextParagraph;
@@ -29,42 +40,40 @@ public final class CreditsReader {
 	 * Reads the top-level credit elements of the given MusicXML 2.0
 	 * document, creates {@link TextFrame}s out of them and adds
 	 * them to the given {@link Layout}, using the given {@link ScoreFormat}.
-	 * The modified {@link Layout} is returned.
 	 */
-	public static Layout read(MxlScorePartwise mxlScorePartwise, Layout layout,
-		ScoreFormat scoreFormat) {
+	public static void read(MxlScorePartwise mxlScorePartwise, Layout layout, ScoreFormat scoreFormat) {
 		Layout ret = layout;
 		//get all credit elements
-		for (MxlCredit credit : mxlScorePartwise.scoreHeader.getCredits()) {
-			ret = plusTextFrame(credit, ret, scoreFormat);
+		for (MxlCredit credit : mxlScorePartwise.getScoreHeader().getCredits()) {
+			addTextFrame(credit, ret, scoreFormat);
 		}
-		return ret;
 	}
 
 	/**
-	 * Adds the given credit element as a {@link TextFrame} to the given {@link Layout}
-	 * and returns the modified {@link Layout}.
+	 * Adds the given credit element as a {@link TextFrame} to the given {@link Layout}.
 	 */
-	private static Layout plusTextFrame(MxlCredit credit, Layout layout, ScoreFormat scoreFormat) {
-		Layout ret = layout;
+	private static void addTextFrame(MxlCredit credit, Layout layout, ScoreFormat scoreFormat) {
 		if (credit.getContent().getCreditContentType() == MxlCreditContentType.CreditWords) {
 			MxlCreditWords mxlCreditWords = (MxlCreditWords) credit.getContent();
 			//create formatted text
 			FormattedText text = createFormattedText(mxlCreditWords, scoreFormat.lyricFont);
 			//compute position (read only the position of the first credit-words element)
-			Page firstPage = layout.pages.get(0);
-			float tenths = scoreFormat.interlineSpace / 10;
-			MxlFormattedText mxlFirstCreditWords = mxlCreditWords.getItems().getFirst();
-			Point2f position = new Point2f(notNull(mxlFirstCreditWords.getPrintStyle().getPosition()
-				.getDefaultX(), 10f) *
-				tenths, firstPage.format.size.height -
-				notNull(mxlFirstCreditWords.getPrintStyle().getPosition().getDefaultY(), 10f) * tenths);
+			Page firstPage = layout.getPages().get(0);
+			float tenths = scoreFormat.getInterlineSpace() / 10;
+			MxlFormattedText mxlFirstCreditWords = mxlCreditWords.getItems().get(0);
+			Point2f offsetFromBottomInTenths = new Point2f(10f, 10f);
+			if (mxlFirstCreditWords.getPrintStyle() != null && mxlFirstCreditWords.getPrintStyle().getPosition() != null) {
+				MxlPosition pos = mxlFirstCreditWords.getPrintStyle().getPosition();
+				offsetFromBottomInTenths = new Point2f(pos.getDefaultX(), pos.getDefaultY());
+			}
+			Point2f position = new Point2f(offsetFromBottomInTenths.x * tenths,
+				firstPage.getFormat().getSize().height - offsetFromBottomInTenths.y * tenths);
 			//compute size
 			//this is the width of the widest paragraph and the height of the sum of all paragraphs
 			float maxParagraphWidth = 1; //at least 1 mm
 			float sumParagraphsHeight = 1; //at least 1 mm
-			for (FormattedTextParagraph paragraph : text.paragraphs) {
-				maxParagraphWidth = Math.max(maxParagraphWidth, paragraph.getWidthMm());
+			for (FormattedTextParagraph paragraph : text.getParagraphs()) {
+				maxParagraphWidth = Math.max(maxParagraphWidth, paragraph.getMetrics().getWidth());
 				sumParagraphsHeight += paragraph.getHeightMm();
 			}
 			Size2f size = new Size2f(maxParagraphWidth, sumParagraphsHeight);
@@ -95,10 +104,12 @@ public final class CreditsReader {
 				position = position.add(0, -size.height / 2);
 			}
 			//create and add TextFrame
-			ret = ret.plusFrame(new TextFrame(new FrameData(position, size), text), 0);
+			TextFrame textFrame = new TextFrame();
+			textFrame.setPosition(position);
+			textFrame.setSize(size);
+			textFrame.setText(text);
+			layout.getPages().get(0).addFrame(textFrame);
 		}
-
-		return ret;
 	}
 
 	/**
@@ -106,8 +117,8 @@ public final class CreditsReader {
 	 */
 	private static FormattedText createFormattedText(MxlCreditWords mxlCreditWords,
 		FontInfo defaultFont) {
-		PVector<FormattedTextParagraph> paragraphs = pvec();
-		PVector<FormattedTextElement> elements = pvec();
+		CList<FormattedTextParagraph> paragraphs = clist();
+		CList<FormattedTextElement> elements = clist();
 		//iterate through all credit-words elements.
 		//currently we are only interested in credit-words elements on page 1.
 		Alignment alignment = FormattedTextParagraph.defaultAlignment;
@@ -130,8 +141,8 @@ public final class CreditsReader {
 			for (int iLine = 0; iLine < textLines.length; iLine++) {
 				if (iLine > 0) {
 					//not the first line: we have to create a new paragraph
-					paragraphs = paragraphs.plus(new FormattedTextParagraph(elements, alignment));
-					elements = pvec();
+					paragraphs.add(new FormattedTextParagraph(elements.close(), alignment));
+					elements = clist();
 				}
 				//read line
 				String textLine = textLines[iLine];
@@ -146,20 +157,20 @@ public final class CreditsReader {
 					//create text element
 					FormattedTextElement textElement = new FormattedTextString(textLine,
 						new FormattedTextStyle(fontInfo, color, null));
-					elements = elements.plus(textElement);
+					elements.add(textElement);
 				}
 			}
 			if (endsWithLineBreak) {
 				//create a new paragraph
-				paragraphs = paragraphs.plus(new FormattedTextParagraph(elements, alignment));
-				elements = pvec();
+				paragraphs.add(new FormattedTextParagraph(elements.close(), alignment));
+				elements = clist();
 			}
 		}
 		//add non-empty paragraph at the end
 		if (elements.size() > 0) {
-			paragraphs = paragraphs.plus(new FormattedTextParagraph(elements, alignment));
+			paragraphs.add(new FormattedTextParagraph(elements.close(), alignment));
 		}
-		return new FormattedText(paragraphs);
+		return new FormattedText(paragraphs.close());
 	}
 
 }
